# fastapi_rooms

./: alembic.ini  docker-compose.yml  pyproject.toml
.docker/mysql/: Dockerfile  my.cnf
.docker/postgres/: init
.docker/python/: Dockerfile
api/: main.py
api/cruds/: task.py
api/db/: env.py
api/models/: user.py
api/routers/: task.py  user.py
api/schemas/: task.py  user.py
