[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.14"
fastapi = "^0.103.1"
sqlalchemy = "^1.4.23"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aiomysql = "^0.2.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
pymysql = "^1.1.0"
streamlit = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
